Deploy/Ingress/task_dotnet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-dotnet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-dotnet-service
            port:
              number: 80
