Deploy/Ingress/task_nestjs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-nestjs-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /task-nestjs
        pathType: Prefix
        backend:
          service:
            name: task-nestjs-service
            port:
              number: 80
