Deploy/Ingress/task_node.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-node-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /task-node
        pathType: Prefix
        backend:
          service:
            name: task-node-service
            port:
              number: 80
